--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
 
         <div class="card">
-            <img src="Среда.jpg" alt="Ambiance">
+            <img src="Среда.jpg" alt="Environment">
             <div class="info">
-                <h2>Ambiance</h2>
+                <h2>Environment</h2>
                 <p>2024 • 60×60 cm • Huile sur toile</p>
             </div>
         </div>
